# docker-claude

./: Cargo.toml  Dockerfile  LICENSE  README.md  entrypoint-bin
.beads/: .beads-credential-key  dolt-server.activity  metadata.json
.beads/docker-claude-d7p/: contract.md  martin-fowler-tests.md  test-defects.md
entrypoint/: Cargo.toml  entrypoint
entrypoint/src/: main.rs
src/: main.rs
