[package]
name = "claude-dock"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
colored = "3"
keyring = { version = "3", features = ["linux-native"] }
which = "7"
itertools = "0.14"
tap = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
